# using_pytest

./: initialize.sh  pyproject.toml  readme.md
docs/slides/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  presentation.md
tests/: test_foo.py  test_using_pytest.py
using_pytest/: __init__.py
