[tool.poetry]
name = "using-pytest"
version = "0.1.0"
description = ""
authors = ["Matt Hale <mhale@idealintegrations.net>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
